--- a/labs/lab-02/lab02.ipynb
+++ b/labs/lab-02/lab02.ipynb
@@ -35,14 +35,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting matplotlib\n",
+      "  Downloading matplotlib-3.8.0-cp311-cp311-win_amd64.whl (7.6 MB)\n",
+      "     ---------------------------------------- 7.6/7.6 MB 14.4 MB/s eta 0:00:00\n",
+      "Collecting contourpy>=1.0.1\n",
+      "  Downloading contourpy-1.1.1-cp311-cp311-win_amd64.whl (480 kB)\n",
+      "     ------------------------------------- 480.5/480.5 kB 31.4 MB/s eta 0:00:00\n",
+      "Collecting cycler>=0.10\n",
+      "  Downloading cycler-0.11.0-py3-none-any.whl (6.4 kB)\n",
+      "Collecting fonttools>=4.22.0\n",
+      "  Downloading fonttools-4.42.1-cp311-cp311-win_amd64.whl (2.1 MB)\n",
+      "     ---------------------------------------- 2.1/2.1 MB 26.7 MB/s eta 0:00:00\n",
+      "Collecting kiwisolver>=1.0.1\n",
+      "  Downloading kiwisolver-1.4.5-cp311-cp311-win_amd64.whl (56 kB)\n",
+      "     ---------------------------------------- 56.1/56.1 kB ? eta 0:00:00\n",
+      "Requirement already satisfied: numpy<2,>=1.21 in c:\\users\\administrator\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from matplotlib) (1.23.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\administrator\\appdata\\roaming\\python\\python311\\site-packages (from matplotlib) (23.1)\n",
+      "Collecting pillow>=6.2.0\n",
+      "  Downloading Pillow-10.0.1-cp311-cp311-win_amd64.whl (2.5 MB)\n",
+      "     ---------------------------------------- 2.5/2.5 MB 26.6 MB/s eta 0:00:00\n",
+      "Collecting pyparsing>=2.3.1\n",
+      "  Downloading pyparsing-3.1.1-py3-none-any.whl (103 kB)\n",
+      "     -------------------------------------- 103.1/103.1 kB 5.8 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\administrator\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\administrator\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Installing collected packages: pyparsing, pillow, kiwisolver, fonttools, cycler, contourpy, matplotlib\n",
+      "Successfully installed contourpy-1.1.1 cycler-0.11.0 fonttools-4.42.1 kiwisolver-1.4.5 matplotlib-3.8.0 pillow-10.0.1 pyparsing-3.1.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.3.1 -> 23.2.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "# In case you don't have pandas, uncomment\n",
     "# the following lines and run the cell\n",
     "\n",
-    "# %pip install pandas"
+    "# %pip install pandas\n",
+    "%pip install matplotlib\n"
    ]
   },
   {
@@ -78,11 +122,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: import pandas and matplotlib in this cell"
+    "#TODO: import pandas and matplotlib in this cell\n",
+    "\n",
+    "# Importing pandas\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Importing matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n"
    ]
   },
   {
@@ -95,11 +146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: read the cookies.csv file into a pandas dataframe"
+    "#TODO: read the cookies.csv file into a pandas dataframe\n",
+    "cookies = pd.read_csv('cookies.csv')"
    ]
   },
   {
@@ -121,11 +173,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            cookie                                        ingredients  \\\n",
+      "0     laddoo lemon             [\"flour\",\"lemon juice\",\"sugar\",\"ghee\"]   \n",
+      "1  red velvet rauw  [\"flour\",\"cocoa powder\",\"butter\",\"red food col...   \n",
+      "2         nevadito  [\"flour\",\"chocolate chips\",\"milk\",\"vanilla ext...   \n",
+      "3  red velvet rauw  [\"flour\",\"cocoa powder\",\"butter\",\"red food col...   \n",
+      "4  bad berry bunny           [\"flour\",\"blueberries\",\"sugar\",\"butter\"]   \n",
+      "5     orange ozuna   [\"flour\",\"orange juice\",\"sugar\",\"vegetable oil\"]   \n",
+      "6      minty miami          [\"flour\",\"mint extract\",\"sugar\",\"butter\"]   \n",
+      "7        chocolate       [\"flour\",\"chocolate chips\",\"sugar\",\"butter\"]   \n",
+      "8     laddoo lemon             [\"flour\",\"lemon juice\",\"sugar\",\"ghee\"]   \n",
+      "9      minty miami          [\"flour\",\"mint extract\",\"sugar\",\"butter\"]   \n",
+      "\n",
+      "   calories  radius  cost_to_make  \n",
+      "0       170   3.102          0.67  \n",
+      "1       198   3.780          1.07  \n",
+      "2       224   4.069          1.04  \n",
+      "3       198   3.780          1.07  \n",
+      "4       191   4.148          1.39  \n",
+      "5       162   3.241          1.15  \n",
+      "6       204   3.964          0.84  \n",
+      "7       243   3.684          1.17  \n",
+      "8       178   3.989           NaN  \n",
+      "9       184   3.743          0.74  \n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO: print the head of the dataframe"
+    "#TODO: print the head of the dataframe\n",
+    "print(cookies.head(10))"
    ]
   },
   {
@@ -139,11 +222,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cookie           object\n",
+      "ingredients      object\n",
+      "calories          int64\n",
+      "radius          float64\n",
+      "cost_to_make    float64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "#TODO: check the data types of the columns"
+    "#TODO: check the data types of the columns\n",
+    "# Displaying the data types of each column\n",
+    "print(cookies.dtypes)"
    ]
   },
   {
@@ -155,11 +253,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 129 entries, 0 to 128\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   cookie        129 non-null    object \n",
+      " 1   ingredients   129 non-null    object \n",
+      " 2   calories      129 non-null    int64  \n",
+      " 3   radius        129 non-null    float64\n",
+      " 4   cost_to_make  114 non-null    float64\n",
+      "dtypes: float64(2), int64(1), object(2)\n",
+      "memory usage: 5.2+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: use info() to get information about datatypes and null values"
+    "# TODO: use info() to get information about datatypes and null values\n",
+    "print(cookies.info())\n",
+    "# info() function is a valuable method when it comes to getting a concise summary of a DataFrame.\n",
+    "# It provides information about index data type, column data types, non-null values, and memory usage.\n",
+    "# By observing the non-null counts in comparison to the total entries, you can quickly spot columns that have missing values."
    ]
   },
   {
@@ -699,7 +821,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -713,12 +835,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "63639127d0784e8e4de1a76bcacd89583be09d9f82d600966cd9457d183cbbf7"
+    "hash": "ff4b1fca65a764b45acb559e482afe389d289dd599b9f8c5fd12ff5c2ea46a65"
    }
   }
  },
