--- a/lecture_18/worksheet_18.ipynb
+++ b/lecture_18/worksheet_18.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 18\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name:  Haoxiang Huo\n",
+    "UID: U13668934\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -177,7 +177,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -191,12 +191,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "ff4b1fca65a764b45acb559e482afe389d289dd599b9f8c5fd12ff5c2ea46a65"
    }
   }
  },
